--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,9 +26,10 @@ jobs:
       - name: Run script to generate data
         run: python main.py
 
-      - name: Upload dat file as artifact
-        uses: actions/upload-artifact@v4  # 将这里从 v3 改为 v4
+      - name: Commit and push changes
+        uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          name: isp_data
-          path: ISP_China*.dat
-          retention-days: 7
+          # 自定义提交信息
+          commit_message: "Auto-commit: Update ISP_China data"
+          # 指定要提交的文件路径，使用通配符来匹配每天生成的新文件
+          file_pattern: 'ISP_China*.dat'
