--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,55 +1,64 @@
-name: Generate IP Data
+name: Auto Update and Clean ISP Data
 
 on:
   schedule:
-    # 北京时间 00:01 运行，对应 UTC 16:01
-    - cron: '1 16 * * *'
+    - cron: '1 16 * * *'  # 北京时间00:01触发
   workflow_dispatch:
-    # 允许手动触发
+
+permissions:
+  contents: write  # 关键权限设置
 
 jobs:
-  build:
+  process-data:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Set up Python
-        uses: actions/setup-python@v2
+      - name: Checkout code
+        uses: actions/checkout@v4
         with:
-          python-version: '3.x'
+          fetch-depth: 0  # 获取完整历史记录
 
-      - name: Install dependencies
-        run: pip install requests urllib3
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
 
-      - name: Run script to generate data
-        run: python main.py
-
-      - name: Clean up old files (保留近7天)
+      - name: Generate new data
         run: |
-          # 获取当前日期和七天前的日期（格式：YYYYMMDD）
-          current_date=$(date +%Y%m%d)
-          seven_days_ago=$(date -d "$current_date -7 days" +%Y%m%d)
+          pip install requests urllib3
+          python main.py
+          ls -lh ISP_China*.dat  # 生成后验证文件
+
+      - name: Clean old files
+        run: |
+          # 获取7天前日期（UTC时区）
+          cutoff_date=$(date -d "7 days ago" +%Y%m%d)
+          echo "正在清理早于 $cutoff_date 的文件..."
           
-          # 遍历匹配的文件并删除旧文件
-          shopt -s nullglob
-          for file in ISP_China_*.dat; do
-            # 从文件名提取日期部分（假设文件名格式：ISP_China_YYYYMMDD.dat）
-            date_part=$(basename "$file" .dat | cut -d'_' -f3)
+          # 匹配所有数据文件并清理
+          for file in ISP_China*.dat; do
+            # 提取纯数字日期部分
+            date_str=$(echo "$file" | grep -Eo '[0-9]{8}' | head -1)
             
-            # 检查是否为有效日期格式
-            if [[ "$date_part" =~ ^[0-9]{8}$ ]]; then
-              # 比较日期并删除过期文件
-              if [ "$date_part" -le "$seven_days_ago" ]; then
-                echo "删除旧文件: $file"
+            if [[ "$date_str" =~ ^[0-9]{8}$ ]]; then
+              if [ "$date_str" -lt "$cutdate" ]; then
+                echo "删除过期文件: $file (日期: $date_str)"
                 rm -v "$file"
+              else
+                echo "保留有效文件: $file (日期: $date_str)"
               fi
+            else
+              echo "忽略格式异常文件: $file"
             fi
           done
 
-      - name: Commit and push changes
+      - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          commit_message: "Auto-commit: Update ISP_China data"
-          file_pattern: 'ISP_China*.dat'
+          commit_message: "Auto: Update & Clean Data"
+          file_pattern: |
+            ISP_China*.dat
+            !ISP_China_*.dat  # 反模式确保删除被提交
+          commit_user_name: "Data Bot"
+          commit_user_email: "data-bot@noreply.github.com"
+          add_options: '-u'  # 强制更新索引
