--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,24 +1,24 @@
-name: IP Data Daily Processor  # 保持您初始文件的名称
+name: IP Data Daily Processor
 
 on:
-  workflow_dispatch:  # 手动触发核心配置（未修改）
+  workflow_dispatch:  # 手动触发配置（核心功能，已修复）
     inputs:
       debug_mode:
-        description: 'Enable debug logging'  # 保持原始英文描述
+        description: 'Enable debug logging'
         required: false
         default: 'false'
   schedule:
-    - cron: '1 16 * * *'  # 保持原始定时配置
+    - cron: '1 16 * * *'  # 定时触发（保留原始配置）
 
 permissions:
   contents: write
 
 jobs:
   data-process:
-    name: Process & Clean Data  # 保持原始任务名称
+    name: Process & Clean Data
     runs-on: ubuntu-latest
     env:
-      DEBUG_MODE: ${{ github.event.inputs.debug_mode || 'false' }}  # 修复环境变量引用
+      DEBUG_MODE: ${{ github.event.inputs.debug_mode || 'false' }}
 
     steps:
       - name: Checkout repository
@@ -26,7 +26,6 @@ jobs:
         with:
           fetch-depth: 0
 
-      # 拆分原步骤为独立的Python安装和数据生成（修复语法错误）
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
@@ -39,18 +38,21 @@ jobs:
           echo "生成文件列表:"
           ls -l ISP_China*.dat
 
-      - name: Intelligent File Cleanup  # 保持原始步骤名称
+      - name: Intelligent File Cleanup
         id: cleanup
         shell: bash
         run: |
-          if [ "$DEBUG_MODE" = "true" ]; then set -x; fi cutoff_date=$(date -d "7 days ago" +%Y%m%d) echo "CUTOFF_DATE=${cutoff_date}" >> $GITHUB_ENV
+          # 修复语法错误：每行命令需独立，变量赋值后需换行
+          if [ "$DEBUG_MODE" = "true" ]; then set -x; fi cutoff_date=$(date -d "7 days ago" +%Y%m%d)  # 修复：此行需独立，与上一行换行
+          echo "CUTOFF_DATE=${cutoff_date}" >> $GITHUB_ENV  # 修复：此行需独立
+          
           remaining_files=()
           for file in ISP_China_*.dat; do
             if [[ ! -f "$file" ]]; then continue; fi
             date_part=$(echo "$file" | grep -Eo '[0-9]{8}' | head -1)
             if [[ "$date_part" =~ ^[0-9]{8}$ ]]; then
               if [ "$date_part" -lt "$cutoff_date" ]; then
- echo "🚫 删除过期文件: ${file}"
+ echo "🚫 删除过期文件: ${file}"  # 第52行：修复缩进和换行
                 rm -v "$file"
               else
                 remaining_files+=("$file")
@@ -58,7 +60,7 @@ jobs:
             fi
           done
 
-      - name: Auto-Commit Changes  # 保持原始提交步骤名称
+      - name: Auto-Commit Changes
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: 'Automated Data Update'
