--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,27 +38,25 @@ jobs:
           echo "生成文件列表:"
           ls -l ISP_China*.dat
 
-      - name: Intelligent File Cleanup  # 重点修复此步骤的Shell语法
+      - name: Intelligent File Cleanup  # 第40行附近（重点修复区域）
         id: cleanup
         shell: bash
         run: |
           # 修复1：每行命令独立换行，避免同一行多个逻辑
-          if [ "$DEBUG_MODE" = "true" ]; then set -x  # 调试模式：单独一行，逻辑更清晰
+          if [ "$DEBUG_MODE" = "true" ]; then set -x  # 调试模式单独一行，与if条件对齐
           fi
-          # 修复2：变量赋值与使用严格换行
-          cutoff_date=$(date -d "7 days ago" +%Y%m%d) echo "CUTOFF_DATE=${cutoff_date}" >> $GITHUB_ENV
+          # 修复2：变量赋值与环境变量导出严格换行 cutoff_date=$(date -d "7 days ago" +%Y%m%d) echo "CUTOFF_DATE=${cutoff_date}" >> $GITHUB_ENV
           
           remaining_files=()
-          # 修复3：for循环格式标准化，避免缩进混乱（YAML对缩进敏感）
-          for file in ISP_China_*.dat; do if [[ ! -f "$file" ]]; then 
+          # 修复3：for循环格式标准化，缩进统一为2个空格
+          for file in ISP_China_*.dat; do if [[ ! -f "$file" ]]; then
               continue  # 跳过非文件
             fi
             date_part=$(echo "$file" | grep -Eo '[0-9]{8}' | head -1)
-            if [[ "$date_part" =~ ^[0-9]{8}$ ]]; then  # 提取日期部分
+            if [[ "$date_part" =~ ^[0-9]{8}$ ]]; then
               if [ "$date_part" -lt "$cutoff_date" ]; then
- # 修复4：echo命令前无多余空格，与上一行if条件保持缩进一致
-                echo "🚫 删除过期文件: ${file}"  # 第54行（原报错行）已修复
- rm -v "$file"
+ echo "🚫 删除过期文件: ${file}"  # 与上一行if条件缩进对齐
+                rm -v "$file"
               else
                 remaining_files+=("$file")
               fi
