--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,14 @@
 name: IP Data Daily Processor
 
 on:
-  workflow_dispatch:  # 手动触发（修复后必显示按钮）
+  workflow_dispatch:
     inputs:
       debug_mode:
         description: 'Enable debug logging'
         required: false
         default: 'false'
   schedule:
-    - cron: '1 16 * * *'  # 定时触发
+    - cron: '1 16 * * *'
 
 permissions:
   contents: write
@@ -38,35 +38,38 @@ jobs:
           echo "生成文件列表:"
           ls -l ISP_China*.dat
 
-      - name: Intelligent File Cleanup  # 彻底修复Shell命令语法
+      - name: Intelligent File Cleanup # 彻底修复Shell命令语法
         id: cleanup
         shell: bash
         run: |
           # 1. 调试模式（严格分行+缩进）
-          if [ "$DEBUG_MODE" = "true" ]; then set -x  # 缩进2个空格（与if对齐）
-          fi  # 单独成行闭合
+          if [ "$DEBUG_MODE" = "true" ]; then
+            set -x
+          fi
 
           # 2. 计算 cutoff_date（严格分行）
-          cutoff_date=$(date -d "7 days ago" +%Y%m%d)  # 独立行
-          echo "CUTOFF_DATE=${cutoff_date}" >> $GITHUB_ENV  # 独立行
+          cutoff_date=$(date -d "7 days ago" +%Y%m%d)
+          echo "CUTOFF_DATE=${cutoff_date}" >> $GITHUB_ENV
 
           # 3. 清理过期文件（for循环严格缩进）
           remaining_files=()
-          for file in ISP_China_*.dat; do  # for与do分行
-            if [[ ! -f "$file" ]]; then  # 缩进2个空格（for循环内）
-              continue  # 再缩进2个空格（if条件内）
-            fi  # 单独成行闭合
+          for file in ISP_China_*.dat
+          do
+            if [[ ! -f "$file" ]]; then
+              continue
+            fi
 
             # 提取文件名中的日期（如ISP_China_20250101.dat → 20250101）
             date_part=$(echo "$file" | grep -Eo '[0-9]{8}' | head -1)
-            if [[ "$date_part" =~ ^[0-9]{8}$ ]]; then  # 验证日期格式
-              if [ "$date_part" -lt "$cutoff_date" ]; then  # 对比日期
-                echo "🚫 删除过期文件: ${file}"  # 缩进2个空格（if条件内）
- rm -v "$file"  # 与echo同一层级（缩进一致） else
-                remaining_files+=("$file")  # 保留最新文件
+            if [[ "$date_part" =~ ^[0-9]{8}$ ]]; then # 验证日期格式
+              if [ "$date_part" -lt "$cutoff_date" ]; then # 对比日期
+                echo "🚫 删除过期文件: ${file}"
+                rm -v "$file"
+              else
+                remaining_files+=("$file") # 保留最新文件
               fi
             fi
-          done  # for循环闭合（与for对齐）
+          done
 
       - name: Auto-Commit Changes
         uses: stefanzweifel/git-auto-commit-action@v4
