--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,8 @@ jobs:
 
       - name: Generate Data File
         run: |
-          # The requirements.txt file is not present, so we directly run the main file.
+          # The 'requests' library is not a standard library and needs to be installed.
+          pip install requests
           python main.py
           echo "生成文件列表:"
           ls -l ISP_China*.dat
