--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,8 @@ on:
 
 permissions:
   contents: write
+  pages: write
+  id-token: write
 
 jobs:
   data-process:
@@ -33,45 +35,36 @@ jobs:
 
       - name: Generate Data File
         run: |
-          # 检查并安装脚本所需的库
           pip install requests
-          # 运行主脚本，它将生成文件名格式为 ISP_ChinaYYYY-MM-DD.dat 的文件
           python main.py
           echo "生成文件列表:"
           ls -l ISP_China*.dat
 
-      - name: Intelligent File Cleanup # 彻底修复Shell命令语法
+      - name: Intelligent File Cleanup
         id: cleanup
         shell: bash
         run: |
-          # 1. 调试模式（严格分行+缩进）
           if [ "$DEBUG_MODE" = "true" ]; then
             set -x
           fi
 
-          # 2. 计算 cutoff_date（日期格式与Python脚本保持一致）
           cutoff_date=$(date -d "7 days ago" +%Y-%m-%d)
           echo "CUTOFF_DATE=${cutoff_date}" >> $GITHUB_ENV
 
-          # 3. 清理过期文件（for循环严格缩进）
           remaining_files=()
-          # 使用更通用的匹配模式来找到所有文件
           for file in ISP_China*.dat
           do
             if [[ ! -f "$file" ]]; then
               continue
             fi
 
-            # 提取文件名中的日期（如ISP_China2025-01-01.dat → 2025-01-01）
             date_part=$(echo "$file" | grep -Eo '[0-9]{4}-[0-9]{2}-[0-9]{2}' | head -1)
-            # 验证日期格式
             if [[ "$date_part" =~ ^[0-9]{4}-[0-9]{2}-[0-9]{2}$ ]]; then
-              # 对比日期，字符串比较在YYYY-MM-DD格式下是有效的
               if [ "$date_part" \< "$cutoff_date" ]; then
                 echo "🚫 删除过期文件: ${file}"
                 rm -v "$file"
               else
-                remaining_files+=("$file") # 保留最新文件
+                remaining_files+=("$file")
               fi
             fi
           done
@@ -80,5 +73,28 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: 'Automated Data Update'
-          # 使用更通用的模式，匹配所有 ISP_China 开头的 .dat 文件
           file_pattern: 'ISP_China*.dat'
+
+  deploy:
+    name: Deploy to GitHub Pages
+    runs-on: ubuntu-latest
+    needs: data-process
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: .
+
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
