--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,43 +33,52 @@ jobs:
 
       - name: Generate Data File
         run: |
+          # 检查并安装脚本所需的库
           pip install requests
+          # 运行主脚本，它将生成文件名格式为 ISP_ChinaYYYY-MM-DD.dat 的文件
           python main.py
           echo "生成文件列表:"
           ls -l ISP_China*.dat
-          # 将最新文件复制为静态名称
-          cp ISP_China$(date +%Y-%m-%d).dat ISP_China_latest.dat
 
-      - name: Intelligent File Cleanup
+      - name: Intelligent File Cleanup # 彻底修复Shell命令语法
         id: cleanup
         shell: bash
         run: |
+          # 1. 调试模式（严格分行+缩进）
           if [ "$DEBUG_MODE" = "true" ]; then
             set -x
           fi
 
-          cutoff_date_int=$(date -d "7 days ago" +%Y%m%d)
-          echo "CUTOFF_DATE=${cutoff_date_int}" >> $GITHUB_ENV
+          # 2. 计算 cutoff_date（日期格式与Python脚本保持一致）
+          cutoff_date=$(date -d "7 days ago" +%Y-%m-%d)
+          echo "CUTOFF_DATE=${cutoff_date}" >> $GITHUB_ENV
 
-          for file in ISP_China*.dat; do
-            if [ -f "$file" ]; then
-              date_part=$(echo "$file" | grep -Eo '[0-9]{4}-[0-9]{2}-[0-9]{2}' | head -1)
-              if [ -n "$date_part" ]; then
-                file_date_int=$(echo "$date_part" | tr -d '-')
-                if [ "$file_date_int" -lt "$cutoff_date_int" ]; then
-                  echo "🚫 删除过期文件: ${file}"
-                  rm -v "$file"
-                fi
+          # 3. 清理过期文件（for循环严格缩进）
+          remaining_files=()
+          # 使用更通用的匹配模式来找到所有文件
+          for file in ISP_China*.dat
+          do
+            if [[ ! -f "$file" ]]; then
+              continue
+            fi
+
+            # 提取文件名中的日期（如ISP_China2025-01-01.dat → 2025-01-01）
+            date_part=$(echo "$file" | grep -Eo '[0-9]{4}-[0-9]{2}-[0-9]{2}' | head -1)
+            # 验证日期格式
+            if [[ "$date_part" =~ ^[0-9]{4}-[0-9]{2}-[0-9]{2}$ ]]; then
+              # 对比日期，字符串比较在YYYY-MM-DD格式下是有效的
+              if [ "$date_part" \< "$cutoff_date" ]; then
+                echo "🚫 删除过期文件: ${file}"
+                rm -v "$file"
+              else
+                remaining_files+=("$file") # 保留最新文件
               fi
             fi
           done
-
-          if [ -f ISP_China_latest.dat ]; then
-            echo "✅ 保留最新文件: ISP_China_latest.dat"
-          fi
 
       - name: Auto-Commit Changes
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: 'Automated Data Update'
+          # 使用更通用的模式，匹配所有 ISP_China 开头的 .dat 文件
           file_pattern: 'ISP_China*.dat'
